--- a/static/index.html
+++ b/static/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>HyprBar</title>
+  <title>Aether</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
-<body>
-  <div id="bar" class="bar">
-    TEST
+<body style="display: flex; flex-direction: row;">
+  <div id="left" class="left">
+
+  </div>
+  <div id="center" class="center">
+    
+  </div>
+  <div id="right" class="right">
+
   </div>
   <script src="./app.js"></script>
 </body>
