--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
   <title>Aether</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./styles.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 </head>
 <body style="display: flex; flex-direction: row;">
   <div id="left" class="left">
